--- a/SinExWebApp20256461/Views/ServicePackageFees/Costcalculation.cshtml
+++ b/SinExWebApp20256461/Views/ServicePackageFees/Costcalculation.cshtml
@@ -1,5 +1,10 @@
 @model SinExWebApp20256461.ViewModels.CostCalculationViewModel
-<h1>Shipment Calculator</h1>
+
+@{
+    ViewBag.Title = "Cost Calculator";
+}
+
+<h1>Cost Calculator</h1>
 <div class="form-horizontal">
     @if (ViewBag.status == "initial")
     {
