--- a/SinExWebApp20256461/Views/Shipments/Create.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SinExWebApp20256461.ViewModels.CreateShipmentViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Shipment";
 }
 
 <h2>Create New Shipment</h2>
