--- a/SinExWebApp20256461/Views/Shipments/Delete.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SinExWebApp20256461.Models.Shipment
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Shipment";
 }
 
 <h3>Are you sure you want to delete this?</h3>
