--- a/SinExWebApp20256461/Views/Shipments/EditEmployee.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EditEmployee.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SinExWebApp20256461.ViewModels.CreateShipmentViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Shipment";
 }
 
-<h2>Edit the Shipment</h2>
+<h2>Edit Shipment</h2>
 
 @using (Html.BeginForm())
 {
