--- a/SinExWebApp20256461/Views/Shipments/_InvoicesListPartial.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/_InvoicesListPartial.cshtml
@@ -67,10 +67,7 @@
             <th>
                 @if (System.IO.File.Exists(Path.Combine(Server.MapPath("~/Invoices"), item.WaybillNumber + "_total.pdf")))
             {
-                @Html.ActionLink(item.WaybillNumber, "DisplayInvoice", new
-           {
-               WaybillNumber = item.WaybillNumber
-           }, new { target = "_blank" })
+                @Html.ActionLink(item.WaybillNumber, "DisplayInvoice", new { WaybillNumber = item.WaybillNumber }, new { target = "_blank" })
             }
                 else
             {
