--- a/SinExWebApp20256461/Views/SavedAddresses/Create.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Create.cshtml
@@ -15,6 +15,12 @@
                 @Html.ValidationMessageFor(model => model.NickName, "", new { @class = "text-danger" })
             </div>
         </div>
+        @if (@ViewBag.errorMessage != null)
+                {
+            <div class="col-md-offset-2">
+                <b style="color: indianred">@ViewBag.errorMessage</b>
+            </div>   
+        }
 
         <div class="form-group">
             <div class="col-md-2">
@@ -27,10 +33,6 @@
         </div>
         
         <div id="recipient" style="display: none">
-            @if (@ViewBag.errorMessage != null)
-                {
-                <b style="color: indianred">@ViewBag.errorMessage</b>
-            }
             <div class="form-group">
                 @Html.LabelFor(model => model.Building, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -73,9 +75,6 @@
         </div>
  
         <div id="pickup" style="display: none">
-            @if (@ViewBag.errorMessage != null) {
-                <b style="color: indianred">@ViewBag.errorMessage</b>
-            }
             <div class="form-group">
                 @Html.LabelFor(model => model.PickupLocation, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
