--- a/SinExWebApp20256461/Views/Pickups/Create.cshtml
+++ b/SinExWebApp20256461/Views/Pickups/Create.cshtml
@@ -80,6 +80,6 @@
 <p> [Please enter a nickname for the pickup address if you want to save it for later use]</p>
 <br />
 <div class="form-group">
-    <button type="submit" value="Create" class="btn btn-primary">Save</button>
+    <button type="submit" value="Confirm" class="btn btn-primary">Confirm</button>
 </div>
 }
