--- a/SinExWebApp20256461/Views/Shipments/EditCustomer.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EditCustomer.cshtml
@@ -63,7 +63,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Packages[i].PackageTypeSize, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.Packages[i].PackageTypeSize, new SelectList(ViewBag.PackageTypeSizes), "please Select")
+                    @Html.DropDownListFor(model => model.Packages[i].PackageTypeSize, new SelectList(ViewBag.PackageTypeSizes), new { @value = Model.Packages[i].PackageTypeSize})
                 </div>
             </div>
             <div class="form-group">
@@ -241,7 +241,7 @@
                 <input type="submit" name="submit" value="Save" class="btn btn-default" />
             </div>
             <div class="col-md-8">
-                <input type="submit" name="submit" value="Confirm" class="btn btn-default" />
+                <input type="submit" name="submit" value="Continue" class="btn btn-default" />
             </div>
         </div>
     </div>
