--- a/SinExWebApp20256461/Views/Pickups/Create.cshtml
+++ b/SinExWebApp20256461/Views/Pickups/Create.cshtml
@@ -30,13 +30,16 @@
         <div class="form-group">
             @Html.TextBoxFor(model => model.Pickup.Date, htmlAttributes: new { @Value = @DateTime.Now, @type = "datetime", @class = "form-control" })
         </div>
+      
         <div>You can prearranged your pickup up to 5 days, specify both date and time</div>
     }
+
+    <div style="color:#f44542"> @ViewBag.msg </div>
 
 <h2>The pickup Location  :</h2>
     <div class="btn-group" style="margin:5px 0 10px 0;">
         @Html.ActionLink("Same", "Create", new { waybillId = ViewBag.WaybillId, pickupType = Model.Pickup.Type, location = "Same" }, new { @class = "btn btn-success btn-large" })
-        @Html.ActionLink("Diff", "Create", new { waybillId = ViewBag.WaybillId, pickupType = Model.Pickup.Type, location = "Diff" }, new { @class = "btn btn-warning btn-large" })
+        @Html.ActionLink("Different", "Create", new { waybillId = ViewBag.WaybillId, pickupType = Model.Pickup.Type, location = "Diff" }, new { @class = "btn btn-warning btn-large" })
     </div>
 
     <div>
