--- a/SinExWebApp20256461/Views/Shipments/DisplayShipment.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/DisplayShipment.cshtml
@@ -107,7 +107,19 @@
                     @Html.EditorFor(model => model.Packages[i].WeightActual, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 </div>
             </div>
+            <div class="form-group">
+                <div class="control-label col-md-2"><b>Estimated Cost</b></div>
+                <div class="col-md-10">
+                    @ViewBag.FeeCollection[i]
+                </div>
+            </div>
         }
+        <div class="row">
+            <div class="control-label col-md-2"><b>Total Estimated Cost</b></div>
+            <div class="col-md-10">
+                @ViewBag.TotalEstimatedFee
+            </div>
+        </div>
 
         <hr />
         <h4>Recipient Information</h4>
