--- a/SinExWebApp20256461/Views/Shipments/EditCustomer.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EditCustomer.cshtml
@@ -12,6 +12,10 @@
     
     <div class="form-horizontal">
         <hr />
+        @if (@ViewBag.errorMessage != null)
+                {
+            <p class="col-md-offset-2" style="color: indianred">@ViewBag.errorMessage</p>
+        }
         <h4>Shipment Information</h4>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -59,7 +63,8 @@
         {
             string packageNum = "Package Number " + (i + 1);
             <h3>@Html.Label(packageNum)</h3>
-            @Html.ActionLink("delete", "Create", new { id = i }, new { @class = "btn btn-danger" })
+            string n = "delete " + (i + 1);
+            <input type="submit" name="submit" value="@n" class="btn btn-danger" />
             <div class="form-group">
                 @Html.LabelFor(model => model.Packages[i].PackageTypeSize, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -78,6 +83,12 @@
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Packages[i].Value, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Packages[i].Value, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Packages[i].Currency, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.Packages[i].Currency, new SelectList(ViewBag.PackageCurrency), "please Select")
                 </div>
             </div>
             <div class="form-group">
@@ -228,7 +239,7 @@
                     @Html.EditorFor(model => model.RecipientShippingAccountNumber, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.RecipientShippingAccountNumber, "", new { @class = "text-danger" })
                 </div>
-                <p class="col-md-offset-2">Please provide Shipping Account Number of the recipient.</p>
+                <p class="col-md-offset-2">Please provide Shipping Account Number of the recipient.</p>           
             </div>
         </div>
 
