--- a/SinExWebApp20256461/Views/Shipments/EnterTax.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EnterTax.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SinExWebApp20256461.ViewModels.CreateShipmentViewModel
 
 @{
-    ViewBag.Title = "Edit Shipment";
+    ViewBag.Title = "Enter Tax";
 }
 
-<h2>Edit Shipment</h2>
+<h2>Enter Tax</h2>
 
 @using (Html.BeginForm())
 {
@@ -51,24 +51,12 @@
             </div>
         </div>
 
-        @if (Model.Status == "confirmed" || Model.Status == "picked_up")
-        {
-            <div class="form-group">
-                @Html.LabelFor(model => model.Shipment.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.Shipment.Status, new SelectList(ViewBag.Statuses))
-                </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Shipment.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Shipment.Status, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
             </div>
-        }
-        else
-        {
-            <div class="form-group">
-                @Html.LabelFor(model => model.Shipment.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Shipment.Status, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                </div>
-            </div>
-        }
+        </div>
 
         <hr />
         <h4>Package Information</h4>
@@ -104,15 +92,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Packages[i].WeightActual, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @if (Model.Status == "confirmed" || Model.Status == "picked_up")
-                    {
-                        @Html.EditorFor(model => model.Packages[i].WeightActual, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Packages[i].WeightActual, "", new { @class = "text-danger" })
-                    }
-                    else
-                    {
-                        @Html.EditorFor(model => model.Packages[i].WeightActual, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                    }
+                    @Html.EditorFor(model => model.Packages[i].WeightActual, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 </div>
             </div>
         }
@@ -200,7 +180,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.DutyAmount, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
+                            @if (Model.Shipment.Status == "picked_up")
                             {
                                 @Html.EditorFor(model => model.DutyAmount, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.DutyAmount, "", new { @class = "text-danger" })
@@ -216,7 +196,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.TaxAmount, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
+                            @if (Model.Shipment.Status == "picked_up")
                             {
                                 @Html.EditorFor(model => model.TaxAmount, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.TaxAmount, "", new { @class = "text-danger" })
@@ -262,15 +242,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.ShipmentAuthorizationCode, "Authorization Code", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
-                            {
-                                @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.ShipmentAuthorizationCode, "", new { @class = "text-danger" })
-                            }
-                            else
-                            {
-                                @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                            }
+                            @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                         </div>
                     </div>
                 </div>
@@ -281,17 +253,9 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        @Html.LabelFor(model => model.ShipmentAuthorizationCode, "Authorization Code", htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.ShipmentAuthorizationCode, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
-                            {
-                                @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.ShipmentAuthorizationCode, "", new { @class = "text-danger" })
-                            }
-                            else
-                            {
-                                @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                            }
+                            @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                         </div>
                     </div>
                 </div>
@@ -299,15 +263,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.DutyAndTaxAuthorizationCode, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
-                            {
-                                @Html.EditorFor(model => model.DutyAndTaxAuthorizationCode, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.DutyAndTaxAuthorizationCode, "", new { @class = "text-danger" })
-                            }
-                            else
-                            {
-                                @Html.EditorFor(model => model.DutyAndTaxAuthorizationCode, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                            }
+                            @Html.EditorFor(model => model.DutyAndTaxAuthorizationCode, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                         </div>
                     </div>
                 </div>
@@ -317,14 +273,10 @@
         @Html.HiddenFor(model => model.Shipment.ShippingAccountId)
         @Html.HiddenFor(model => model.Shipment.Recipient.RecipientID)
 
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-2">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" name="submit" value="Save" class="btn btn-default" />
             </div>
-            @*<div class="col-md-8">
-                    <input type="submit" value="Confirm" class="btn btn-default" />
-                </div>*@
         </div>
     </div>
 }
