--- a/SinExWebApp20256461/Views/Shipments/EnterAuthorization.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EnterAuthorization.cshtml
@@ -63,6 +63,7 @@
         @for (var i = 0; i < Model.Packages.Count; i++)
         {
             string packageNum = "Package Number " + (i + 1);
+
             <h3>@Html.Label(packageNum)</h3>
             <div class="form-group">
                 @Html.LabelFor(model => model.Packages[i].PackageTypeSize, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -70,18 +71,28 @@
                     @Html.EditorFor(model => model.Packages[i].PackageTypeSize, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 </div>
             </div>
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Packages[i].Description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Packages[i].Description, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 </div>
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Packages[i].Currency, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Packages[i].Currency, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                </div>
+            </div>
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Packages[i].Value, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Packages[i].Value, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 </div>
             </div>
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Packages[i].WeightEstimated, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -280,7 +291,9 @@
 
         @Html.HiddenFor(model => model.Shipment.ShippingAccountId)
         @Html.HiddenFor(model => model.Shipment.Recipient.RecipientID)
-
+        @Html.HiddenFor(model => model.IfSendEmail)
+        @Html.HiddenFor(model => model.ShipmentPayer)
+        @Html.HiddenFor(model => model.TaxPayer)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-2">
@@ -291,6 +304,7 @@
 }
 
 <div>
+    <!--<a href="javascript:void(0);" onclick="history.go(-1);">Back to List</a>-->
     @Html.ActionLink("Back to List", "Index")
 </div>
 
